# teststr1

./: AAPANEL-DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  README-DEPLOYMENT.md  README.md  SYNTAX_CHECK.md  UPDATE_GUIDE.md  app.py  chat_manager.py  cookies.txt  embed.py  ffmpeg_manager.py  install.py  install.sh.backup  install.sh.backup2  main.py  models.py  pyproject.toml  routes.py  rtmp_server.py  rtmp_utils.py  start_rtmp_server.py  streaming.py  streaming_setup_guide.md  update.py  utils.py
instance/: strophenboost.db
static/css/: style.css
static/js/: chat.js  dashboard.js  embed.js  stream.js
templates/: about.html  admin_settings.html  base.html  chat_management.html  contact.html  content_management.html  dashboard.html  documentation.html  embed.html  embed_player.html  privacy.html  profile.html  stream.html  streaming_setup.html  user_management.html
