[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask==2.0.3",
    "flask-sqlalchemy==2.5.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "sqlalchemy==1.4.53",
    "werkzeug==2.0.3",
    "flask-wtf>=1.2.2",
]
